--- a/src/main/resources/local_en.properties
+++ b/src/main/resources/local_en.properties
@@ -1,3 +1,10 @@
-local.locbutton.name.en = En
+local.locbutton.name.en = EN
 local.locbutton.name.ru = \u0420\u0443\u0441
 local.error.wrong_login_or_password = Wrong login or password
+local.navigate.log_in_button = Log in
+local.navigate.sign_up_button = Sign up
+local.navigate.my_account = My account
+local.navigate.my_account.menu.profile = Profile
+local.navigate.my_account.menu.log_out_button = Log out
+local.user.login = Login
+local.user.password = Password
