--- a/src/main/resources/local_en.properties
+++ b/src/main/resources/local_en.properties
@@ -1,6 +1,13 @@
 local.locbutton.name.en = EN
 local.locbutton.name.ru = \u0420\u0443\u0441
 local.error.wrong_login_or_password = Wrong login or password
+local.error.login_is_present = Login busy
+local.error.login_is_wrong = Login must be from 3 to 20 symbols 1-9 0 A-z _
+local.error.password_is_wrong = Password must be from 5 to 20 symbols 1-9 0 A-z _
+local.error.passwords_do_not_match = Passwords do not match
+local.error.surname_is_wrong = Surname incorrect
+local.error.name_is_wrong = Name incorrect
+local.error.patronymic_is_wrong = Patronymic incorrect
 local.navigate.log_in_button = Log in
 local.navigate.sign_up_button = Sign up
 local.navigate.my_account = My account
@@ -8,3 +15,7 @@ local.navigate.my_account.menu.profile = Profile
 local.navigate.my_account.menu.log_out_button = Log out
 local.user.login = Login
 local.user.password = Password
+local.user.password2 = Repeat password
+local.user.surname = Surname
+local.user.name = Name
+local.user.patronymic = Patronymic
