--- a/src/main/resources/local_en.properties
+++ b/src/main/resources/local_en.properties
@@ -1,6 +1,13 @@
 local.locbutton.name.en = EN
 local.locbutton.name.ru = \u0420\u0443\u0441
+local.table.action = Action
+local.action.add = Add
+local.action.edit = Edit
+local.action.delete = Delete
+local.action.select = Select
+local.action.reservation = Reservation
 local.error.wrong_login_or_password = Wrong login or password
+local.error.wrong_data = Data incorrect
 local.error.login_is_present = Login busy
 local.error.login_is_wrong = Login must be from 3 to 20 symbols 1-9 0 A-z _
 local.error.password_is_wrong = Password must be from 5 to 20 symbols 1-9 0 A-z _
@@ -13,6 +20,26 @@ local.navigate.sign_up_button = Sign up
 local.navigate.my_account = My account
 local.navigate.my_account.menu.profile = Profile
 local.navigate.my_account.menu.log_out_button = Log out
+local.navigate.authorised.room_menu= Work with rooms
+local.navigate.authorised.room_menu.add_room_button= Add new room
+local.navigate.authorised.room_menu.remove_room_button = Remove room
+local.navigate.authorised.room_menu.change_room_button = Change room info
+local.navigate.admin.set_room_parameters_button = Set room parameters
+local.navigate.user.shopping_cart = Shopping cart
+local.apartment_params.apartment_type = Apartment type
+local.apartment_params.number_of_beds = Number of beds
+local.apartment_params.number_of_rooms = Number of rooms
+local.apartment.apartment_number = Apartment number
+local.apartment.floor = Floor
+local.apartment.number_of_beds = Number of beds
+local.apartment.apartment_type = Room type
+local.apartment.balcony = Presence of a balcony
+local.apartment.number_of_rooms = Number of rooms
+local.apartment.price = Price per day
+local.order.beginning_date = Beginning date
+local.order.end_date = End date
+local.order.status = Status
+local.order.price = Price
 local.user.login = Login
 local.user.password = Password
 local.user.password2 = Repeat password
