--- a/src/main/resources/local_en.properties
+++ b/src/main/resources/local_en.properties
@@ -6,6 +6,7 @@ local.action.edit = Edit
 local.action.delete = Delete
 local.action.select = Select
 local.action.reservation = Reservation
+local.action.confirm_payment = Confirm payment
 local.error.wrong_login_or_password = Wrong login or password
 local.error.wrong_data = Data incorrect
 local.error.login_is_present = Login busy
@@ -25,6 +26,7 @@ local.navigate.authorised.room_menu.add_room_button= Add new room
 local.navigate.authorised.room_menu.remove_room_button = Remove room
 local.navigate.authorised.room_menu.change_room_button = Change room info
 local.navigate.admin.set_room_parameters_button = Set room parameters
+local.navigate.admin.orders_button = Order list
 local.navigate.user.shopping_cart = Shopping cart
 local.apartment_params.apartment_type = Apartment type
 local.apartment_params.number_of_beds = Number of beds
