--- a/src/main/resources/local_en.properties
+++ b/src/main/resources/local_en.properties
@@ -4,9 +4,13 @@ local.table.action = Action
 local.action.add = Add
 local.action.edit = Edit
 local.action.delete = Delete
+local.action.deactivate = Make apartment unactivated
 local.action.select = Select
 local.action.reservation = Reservation
 local.action.confirm_payment = Confirm payment
+local.action.add_service = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0441\u0435\u0440\u0432\u0438\u0441 \u0432 \u043D\u043E\u043C\u0435\u0440
+local.message.not_paid = Not paid yet
+local.message.paid = Paid
 local.error.wrong_login_or_password = Wrong login or password
 local.error.wrong_data = Data incorrect
 local.error.login_is_present = Login busy
@@ -16,18 +20,27 @@ local.error.passwords_do_not_match = Passwords do not match
 local.error.surname_is_wrong = Surname incorrect
 local.error.name_is_wrong = Name incorrect
 local.error.patronymic_is_wrong = Patronymic incorrect
+local.profile.information = Information about
+local.profile.surname= Surname
+local.profile.name = Name
+local.profile.patronymic = Patronymic
+local.profile.sale = Current discount
+local.profile.sale_info = The discount applies only to room services
 local.navigate.log_in_button = Log in
 local.navigate.sign_up_button = Sign up
 local.navigate.my_account = My account
 local.navigate.my_account.menu.profile = Profile
 local.navigate.my_account.menu.log_out_button = Log out
-local.navigate.authorised.room_menu= Work with rooms
+local.navigate.admin.room_services_button = Room services
 local.navigate.authorised.room_menu.add_room_button= Add new room
 local.navigate.authorised.room_menu.remove_room_button = Remove room
 local.navigate.authorised.room_menu.change_room_button = Change room info
 local.navigate.admin.set_room_parameters_button = Set room parameters
 local.navigate.admin.orders_button = Order list
 local.navigate.user.shopping_cart = Shopping cart
+local.password.current_pass = Current password
+local.password.new_pass = New password
+local.password.new_pass2 = Repeat new password
 local.apartment_params.apartment_type = Apartment type
 local.apartment_params.number_of_beds = Number of beds
 local.apartment_params.number_of_rooms = Number of rooms
@@ -38,6 +51,7 @@ local.apartment.apartment_type = Room type
 local.apartment.balcony = Presence of a balcony
 local.apartment.number_of_rooms = Number of rooms
 local.apartment.price = Price per day
+local.order.order_number = Order number
 local.order.beginning_date = Beginning date
 local.order.end_date = End date
 local.order.status = Status
@@ -48,3 +62,6 @@ local.user.password2 = Repeat password
 local.user.surname = Surname
 local.user.name = Name
 local.user.patronymic = Patronymic
+local.room_service.room_service_name = Room service name
+local.room_service.room_service_price = Price
+local.room_service.cost = Cost
