--- a/src/main/resources/local_ru.properties
+++ b/src/main/resources/local_ru.properties
@@ -4,9 +4,19 @@ local.table.action = \u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
 local.action.add = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C
 local.action.edit = \u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C
 local.action.delete = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
+local.action.deactivate = \u0423\u0431\u0440\u0430\u0442\u044C \u0438\u0437 \u0441\u043F\u0438\u0441\u043A\u0430 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0445
 local.action.select = \u0412\u044B\u0431\u0440\u0430\u0442\u044C
 local.action.reservation = \u0417\u0430\u0440\u0435\u0437\u0435\u0440\u0432\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 local.action.confirm_payment = \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C \u043E\u043F\u043B\u0430\u0442\u0443
+local.action.add_service = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0441\u0435\u0440\u0432\u0438\u0441 \u0432 \u043D\u043E\u043C\u0435\u0440
+local.message.not_paid = \u0415\u0449\u0435 \u043D\u0435 \u043E\u043F\u043B\u0430\u0447\u0435\u043D\u043E
+local.message.paid = \u041E\u043F\u043B\u0430\u0447\u0435\u043D\u043E
+local.profile.information = \u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F \u043E
+local.profile.surname= \u0424\u0430\u043C\u0438\u043B\u0438\u044F
+local.profile.name = \u0418\u043C\u044F
+local.profile.patronymic = \u041E\u0442\u0447\u0435\u0441\u0442\u0432\u043E
+local.profile.sale = \u0422\u0435\u043A\u0443\u0449\u0430\u044F \u0441\u043A\u0438\u0434\u043A\u0430
+local.profile.sale_info = \u0421\u043A\u0438\u0434\u043A\u0430 \u0440\u0430\u043F\u0440\u0430\u0441\u0442\u0440\u0430\u043D\u044F\u0435\u0442\u0441\u044F \u0442\u043E\u043B\u044C\u043A\u043E \u043D\u0430 \u0441\u0435\u0440\u0432\u0438\u0441\u044B \u0432 \u043D\u043E\u043C\u0435\u0440
 local.error.wrong_login_or_password = \u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u044B\u0439 \u043B\u043E\u0433\u0438\u043D \u0438\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
 local.error.wrong_data = \u0414\u0430\u043D\u043D\u044B\u0435 \u043D\u0435 \u0432\u0435\u0440\u043D\u044B
 local.error.login_is_present = \u041B\u043E\u0433\u0438\u043D \u0443\u0436\u0435 \u0437\u0430\u043D\u044F\u0442
@@ -21,10 +31,13 @@ local.navigate.sign_up_button = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430
 local.navigate.my_account = \u041C\u043E\u0439 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
 local.navigate.my_account.menu.profile = \u041F\u0440\u043E\u0444\u0438\u043B\u044C
 local.navigate.my_account.menu.log_out_button = \u0412\u044B\u0439\u0442\u0438
-local.navigate.authorised.room_menu= \u0420\u0430\u0431\u043E\u0442\u0430 \u0441 \u043D\u043E\u043C\u0435\u0440\u0430\u043C\u0438
+local.navigate.admin.room_services_button = \u0421\u0435\u0440\u0432\u0438\u0441\u044B \u0432 \u043D\u043E\u043C\u0435\u0440
 local.navigate.authorised.room_menu.add_room_button= \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u043C\u0435\u0440
 local.navigate.authorised.room_menu.remove_room_button = \u0423\u0431\u0440\u0430\u0442\u044C \u043D\u043E\u043C\u0435\u0440 \u0438\u0437 \u043F\u0435\u0440\u0435\u0447\u043D\u044F \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0445
 local.navigate.authorised.room_menu.change_room_button = \u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044E \u043E \u043D\u043E\u043C\u0435\u0440\u0435
+local.password.current_pass= \u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
+local.password.new_pass= \u041D\u043E\u0432\u044B\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
+local.password.new_pass2=\u041F\u043E\u0432\u0442\u043E\u0440\u0438\u0442\u0435 \u041D\u043E\u0432\u044B\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
 local.apartment_params.apartment_type = \u0422\u0438\u043F \u043D\u043E\u043C\u0435\u0440\u0430
 local.apartment_params.number_of_beds = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043A\u0440\u043E\u0432\u0430\u0442\u0435\u0439
 local.apartment_params.number_of_rooms = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043A\u043E\u043C\u043D\u0430\u0442
@@ -38,6 +51,7 @@ local.apartment.apartment_type = \u0422\u0438\u043F \u043A\u043E\u043C\u043D\u04
 local.apartment.balcony = \u041D\u0430\u043B\u0438\u0447\u0438\u0435 \u0431\u0430\u043B\u043A\u043E\u043D\u0430
 local.apartment.number_of_rooms = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043A\u043E\u043C\u043D\u0430\u0442
 local.apartment.price = \u0426\u0435\u043D\u0430 \u0437\u0430 \u0434\u0435\u043D\u044C
+local.order.order_number = \u041D\u043E\u043C\u0435\u0440 \u0437\u0430\u043A\u0430\u0437\u0430
 local.order.beginning_date = \u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430
 local.order.end_date = \u0414\u0430\u0442\u0430 \u043A\u043E\u043D\u0446\u0430
 local.order.status = \u0421\u0442\u0430\u0442\u0443\u0441
@@ -48,3 +62,6 @@ local.user.password2 = \u041F\u043E\u0432\u0442\u043E\u0440\u0438\u0442\u0435 \u
 local.user.surname = \u0424\u0430\u043C\u0438\u043B\u0438\u044F
 local.user.name = \u0418\u043C\u044F
 local.user.patronymic = \u041E\u0442\u0447\u0435\u0441\u0442\u0432\u043E
+local.room_service.room_service_name = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u0441\u0435\u0440\u0432\u0438\u0441\u0430
+local.room_service.room_service_price = \u0426\u0435\u043D\u0430
+local.room_service.cost = \u0421\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
